<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.UserDetailsActivity"
        tools:layout_editor_absoluteY="25dp">

        <ImageView
            android:id="@+id/background_iv"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.2"
            android:background="#000000"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic_iv"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/user_profile_pic"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/likes_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/like"
            app:layout_constraintEnd_toStartOf="@+id/categories_iv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
            app:srcCompat="@drawable/ic_thumb_up"
            android:tint="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/categories_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/categories"
            app:layout_constraintEnd_toStartOf="@+id/collections_iv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/likes_iv"
            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
            app:srcCompat="@drawable/ic_shape"
            android:tint="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/collections_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/collections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/categories_iv"
            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
            app:srcCompat="@drawable/ic_image_multiple"
            android:tint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            app:layout_constraintEnd_toStartOf="@+id/likes_iv"
            app:layout_constraintStart_toEndOf="@+id/likes_iv"
            app:layout_constraintTop_toBottomOf="@+id/likes_iv" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            app:layout_constraintEnd_toStartOf="@+id/categories_iv"
            app:layout_constraintStart_toEndOf="@+id/categories_iv"
            app:layout_constraintTop_toBottomOf="@+id/categories_iv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collections"
            app:layout_constraintEnd_toStartOf="@+id/collections_iv"
            app:layout_constraintStart_toEndOf="@+id/collections_iv"
            app:layout_constraintTop_toBottomOf="@+id/collections_iv" />

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            tools:text="@tools:sample/full_names"
            android:textColor="@color/colorPrimaryDark"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic_iv" />

        <TextView
            android:id="@+id/likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="7"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/likes_iv"
            app:layout_constraintStart_toEndOf="@+id/likes_iv"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/category_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="0"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/categories_iv"
            app:layout_constraintStart_toEndOf="@+id/categories_iv"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/collection_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="12"
            android:textColor="@color/colorAccent"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/collections_iv"
            app:layout_constraintStart_toEndOf="@+id/collections_iv"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>